<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dicodings_logo" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/AuthView.TextView"
        android:alpha="0"
        android:layout_marginTop="32dp"
        android:text="@string/create_an_account"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <TextView
        android:id="@+id/tv_register_message"
        style="@style/AuthView.TextView"
        android:alpha="0"
        android:layout_marginTop="0dp"
        android:letterSpacing="0"
        android:fontFamily="@font/poppins"
        android:text="@string/register_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/AuthView.TextView"
        android:alpha="0"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_message"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_name"
            android:textAlignment="viewStart"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        style="@style/AuthView.TextView"
        android:alpha="0"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etl_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.louis.bpaaisubmission.customview.CustomEmailEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        style="@style/AuthView.TextView"
        android:alpha="0"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etl_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.louis.bpaaisubmission.customview.CustomPasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/AuthView.Button"
        android:alpha="0"
        android:layout_height="64dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etl_password" />

    <LinearLayout
        android:id="@+id/container_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/AuthView.TextView.LoginRegister"
            android:text="@string/have_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_login"
            style="@style/AuthView.TextView.LoginRegister"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <include
        android:id="@+id/container_loading"
        layout="@layout/loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>