<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    android:layout_marginVertical="8dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground">
        
        <ImageView
            android:id="@+id/iv_userpic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/defaultprofilpic"
            android:contentDescription="@string/default_profile_picture" />

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/defaultpicstory"
            app:layout_constraintTop_toBottomOf="@id/iv_userpic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/story_picture"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/ItemStory.TextView"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toEndOf="@id/iv_userpic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_userpic"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_description"
            style="@style/ItemStory.TextView"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_description"
            android:fontFamily="@font/poppins_light"
            android:letterSpacing="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_story"
            android:justificationMode="inter_word"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/ItemStory.TextView"
            android:text="@string/dummy_date"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>