<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DetailStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/detail_title"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:singleLine="true"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_userpic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:transitionName="profil_pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/defaultprofilpic"
                android:contentDescription="@string/default_profile_picture" />

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:src="@drawable/defaultpicstory"
                android:transitionName="story_pic"
                app:layout_constraintTop_toBottomOf="@id/iv_userpic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/story_picture"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/ItemStory.TextView"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_bold"
                android:transitionName="name"
                app:layout_constraintStart_toEndOf="@id/iv_userpic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/iv_userpic"
                app:layout_constraintTop_toTopOf="@id/iv_userpic"/>

            <TextView
                android:id="@+id/description"
                style="@style/ItemStory.TextView"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_story"/>

            <TextView
                android:id="@+id/tv_description"
                style="@style/ItemStory.TextView"
                android:text="@string/description"
                android:fontFamily="@font/poppins_light"
                android:letterSpacing="0.005"
                android:transitionName="description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/ItemStory.TextView"
                android:text="@string/dummy_date"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:transitionName="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>