<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_story"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:singleLine="true"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_margin="32dp"
                app:srcCompat="@drawable/defaultpicstory"
                android:transitionName="story_pic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/story_picture"/>

            <TextView
                android:id="@+id/select_picture"
                style="@style/ItemStory.TextView"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/select_picture"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_story"/>

            <Button
                android:id="@+id/btn_camera"
                style="@style/AuthView.Button"
                android:text="@string/camera"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@id/select_picture"/>

            <Button
                android:id="@+id/btn_gallery"
                style="@style/AuthView.Button"
                android:layout_marginStart="16dp"
                android:text="@string/gallery"
                android:textSize="14sp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/btn_camera"/>

            <TextView
                android:id="@+id/description"
                style="@style/ItemStory.TextView"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/write_description"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <EditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="150dp"
                    android:ems="10"
                    android:gravity="top"
                    android:paddingVertical="8dp"
                    android:inputType="textMultiLine"
                    android:fontFamily="@font/poppins_light"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/share_my_location"
                style="@style/ItemStory.TextView"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="0dp"
                android:text="@string/share_my_location"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.005"
                app:layout_constraintBottom_toBottomOf="@id/switch_share_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/switch_share_location"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_share_location"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_height="0dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/etl_description"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_upload"
                style="@style/AuthView.Button"
                android:layout_height="64dp"
                android:text="@string/upload_story"
                android:layout_marginBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share_my_location"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="196dp"
                android:layout_marginEnd="197dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="196dp"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/view_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/navi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/please_wait"
            android:textColor="@color/navi"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>